# scrap-cityevent

./: .gitignore  CHANGES.md  README.md  pyproject.toml  requirements.txt  variants.json
scrap_cityevent/: __init__.py  __main__.py  main.py  notifier.py  scraper.py
